--- a/app/backend/packages/customer_sitepackage/composer.json
+++ b/app/backend/packages/customer_sitepackage/composer.json
@@ -6,11 +6,11 @@
     "require": {
 		"php": "^7.4 || ^8.1",
         "typo3/cms-core": "^11.5",
-        "starterteam/starter": "^4.1 || 4.x-dev"
+        "starterteam/starter": "dev-main"
     },
     "suggest": {
-        "starterteam/starter-twig": "^4.1 || 4.x-dev",
-        "starterteam/starter-nessa": "^4.1 || 4.x-dev"
+        "starterteam/starter-twig": "^3.0",
+        "starterteam/starter-nessa": "^3.0"
     },
     "extra": {
         "typo3/cms": {
