--- a/app/backend/packages/sitepackage_nessa/composer.json
+++ b/app/backend/packages/sitepackage_nessa/composer.json
@@ -6,8 +6,8 @@
     "require": {
         "php": "^7.4 || ^8.1",
         "typo3/cms-core": "^11.5",
-        "starterteam/starter": "^4.1 || 4.x-dev",
-        "starterteam/starter-nessa": "^4.1 || 4.x-dev"
+        "starterteam/starter": "dev-main",
+        "starterteam/starter-nessa": "dev-main"
     },
     "extra": {
         "typo3/cms": {
