--- a/app/backend/packages/starter_twig_news/composer.json
+++ b/app/backend/packages/starter_twig_news/composer.json
@@ -13,7 +13,7 @@
 		"georgringer/news": "^9.4",
 		"php": "^7.4 || ^8.1",
         "typo3/cms-core": "^11.5",
-        "starterteam/starter-twig": "^4.1 || 4.x-dev"
+        "starterteam/starter-twig": "4.x-dev"
     },
 	"autoload": {
         "psr-4": {
