--- a/app/backend/packages/customer_sitepackage/composer.json
+++ b/app/backend/packages/customer_sitepackage/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": "^7.4 || ^8.1",
         "typo3/cms-core": "^11.5",
-        "starterteam/starter": "^4.0 || 4.1-dev"
+        "starterteam/starter": "^4.1"
     },
     "suggest": {
         "starterteam/starter-twig": "^4.0 || 4.1-dev",
