--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -27,6 +27,10 @@
         "ichhabrecht/content-defender": "^3.2",
         "starterteam/site-package-freya": "dev-main",
         "starterteam/site-package-nessa": "dev-main",
+		"starterteam/starter": "dev-main",
+		"starterteam/starter-freya": "dev-main",
+		"starterteam/starter-nessa": "dev-main",
+		"starterteam/starter-twig": "dev-main",
         "starterteam/starter-twig-news": "dev-main",
         "twig/twig": "^3",
         "typo3/cms-backend": "^11.5",
@@ -96,7 +100,9 @@
 		"patches": {
 			"pti/pti": {
 				"Prepend site base uri to assets": "patches/pti/pti_prepend_site_uri_assets.patch",
-				"Fix allowed data type for image processing": "patches/pti/data_types_image_processing.patch"
+				"Fix allowed data type for image processing": "patches/pti/data_types_image_processing.patch",
+				"Make file collection records renderable": "patches/pti/make_file_collections_renderable.patch",
+				"Preview image rendering runs into exception": "patches/pti/preview_image_runs_into_exception.patch"
 			}
 		}
     },
